# csaw-2024-entry-docs

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  secrets.sample.yml
.cspell/: custom-dictionary-workspace.txt
docs/: Experimentation_Log.md  Key_Notes_to_Present.md
src/parker_csaw/: __init__.py  cli.py  json_extractor.py  llm.py  obfuscate_diff.py  secrets_and_paths.py  summarize_modules.py
